# OZYS_V3

./: .gitignore  README.md  SG_PCB_V3_1.kicad_sch
CubeMX/: .project  ozys.ioc
bootloader/: .gitignore  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  pub.key  size.py
bootloader/.cargo/: config.toml
bootloader/src/: can.rs  fmt.rs  main.rs  main_old.rs  ota.rs
epsilon/: Epsilon_final.kicad_pcb  Epsilon_final.kicad_pro  Epsilon_final.kicad_sch
epsilon/Epsilon_final/: Epsilon_final.kicad_pro  Epsilon_final.kicad_sch
epsilon_r1/: Epsilon_final.kicad_pcb  Epsilon_final.kicad_sch
epsilon_r2/: epsilon_r2.kicad_pcb  epsilon_r2.kicad_pro
firmware/: .gitignore  Cargo.toml  README.md  memory.x  rust-toolchain.toml  size.py
firmware/.cargo/: config.toml
firmware/src/: adc_test.rs  bootloader.rs  can.rs  can_main.rs  main.rs  ota.rs  sd_index_test.rs  sd_test.rs  toggle_pwm.rs  update_first.rs  update_payload_main.rs
ozyz_v3/: OZYS_V3_Final.kicad_pcb  OZYS_V3_Final.kicad_pro  OZYS_V3_Final.kicad_sch  Power.kicad_sch  Receiver1.kicad_sch  Receiver_Extra.kicad_sch  Receiver_Main.kicad_sch  fp-lib-table
ozyz_v3/OZYS_V3_Final/: OZYS_V3_Final.kicad_sch  Power.kicad_sch  Receiver.kicad_sch  Receiver1.kicad_sch
pcb_epsilon/Epsilon/: Epsilon.kicad_pcb  Epsilon.kicad_pro  Epsilon.kicad_sch  EpsilonV1.kicad_pcb  EpsilonV2.kicad_pcb  EpsilonV2.kicad_pro  EpsilonV3.kicad_pcb
pcb_ozys/: Epsilon.kicad_sch  Ozys.kicad_sch  Power.kicad_sch  Receiver_1.kicad_sch  Receiver_Extra.kicad_sch  Receiver_Main.kicad_sch  SG_PCB_V3_1.kicad_prl  SG_PCB_V3_1.kicad_pro  SG_PCB_V3_1.kicad_sch  untitled.kicad_sch
simulink/: ozysdriver.slx  ozysdriverandreceiver.slx  ozysreceiver.slx  untitled1.slx
simulink/ozysdriverandreceiver_grt_rtw/: ozysdriverandreceiver_d22bbe4d_1_gateway.c  ozysdriverandreceiver_d22bbe4d_1_gateway.h  ozysdriverandreceiver_d22bbe4d_49.c  ozysdriverandreceiver_d22bbe4d_49.h  ozysdriverandreceiver_d22bbe4d_49_ds.c  ozysdriverandreceiver_d22bbe4d_49_ds.h  ozysdriverandreceiver_d22bbe4d_49_ds_acon.c  ozysdriverandreceiver_d22bbe4d_49_ds_acon.h  ozysdriverandreceiver_d22bbe4d_49_ds_acon_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_acon_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_assert.c  ozysdriverandreceiver_d22bbe4d_49_ds_assert.h  ozysdriverandreceiver_d22bbe4d_49_ds_dnf_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_dnf_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_dnf_v_x.c  ozysdriverandreceiver_d22bbe4d_49_ds_dnf_v_x.h  ozysdriverandreceiver_d22bbe4d_49_ds_dxdelt_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_dxdelt_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_dxf.c  ozysdriverandreceiver_d22bbe4d_49_ds_dxf.h  ozysdriverandreceiver_d22bbe4d_49_ds_dxf_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_dxf_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_dxicrm_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_dxicrm_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_dxy_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_dxy_p.h  ozysdriverandreceiver_d22bbe4d_49_ds_external_struct.h  ozysdriverandreceiver_d22bbe4d_49_ds_externals.h  ozysdriverandreceiver_d22bbe4d_49_ds_f.c  ozysdriverandreceiver_d22bbe4d_49_ds_f.h  ozysdriverandreceiver_d22bbe4d_49_ds_imax.c  ozysdriverandreceiver_d22bbe4d_49_ds_imax.h  ozysdriverandreceiver_d22bbe4d_49_ds_imin.c  ozysdriverandreceiver_d22bbe4d_49_ds_imin.h  ozysdriverandreceiver_d22bbe4d_49_ds_log.c  ozysdriverandreceiver_d22bbe4d_49_ds_log.h  ozysdriverandreceiver_d22bbe4d_49_ds_lv.c  ozysdriverandreceiver_d22bbe4d_49_ds_lv.h  ozysdriverandreceiver_d22bbe4d_49_ds_mcon_p.c  ozysdriverandreceiver_d22bbe4d_49_ds_mcon_p.h  (+26 more)
simulink/ozysdriverandreceiver_grt_rtw/tlc/: s0_b0_ff47b_BlockInstanceSetup.tlc  s0_b0_ff47b_Derivatives.tlc  s0_b0_ff47b_ForcingFunction.tlc  s0_b0_ff47b_Functions.tlc  s0_b0_ff47b_MassMatrix.tlc  s0_b0_ff47b_Outputs.tlc  s0_b0_ff47b_Projection.tlc  s0_b0_ff47b_Start.tlc  s0_b0_ff47b_SystemInitialize.tlc  s0_b0_ff47b_TLCInterface.tlc  s0_b0_ff47b_Terminate.tlc  s0_b0_ff47b_Update.tlc
