[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32g474ce",
    "defmt",
    "dual-bank"
] }
embassy-boot-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "defmt"
]}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
