[package]
edition = "2021"
name = "bootloader"
version = "0.1.0"

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32g474ce",
    "time-driver-any",
    "dual-bank",
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-1_000_000",
    "defmt",
] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
embedded-hal = "1.0.0"
firmware-common-new = { path = "../../Rust_Monorepo/firmware-common-new", default-features = false, features = [
    "defmt",
] }
# stm32g0 and stm32g4 have the same memory location for device signature
stm32-device-signature = { version = "0.3.3", features = ["stm32g0"] }
embedded-can = "0.4.1"
embedded-io-async = "0.6.1"
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
