[package]
edition = "2024"
name = "bootloader"
version = "0.1.0"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-stm32/defmt",
    "firmware-common-new/defmt",
]

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32g474ce",
    "time-driver-any",
    "dual-bank",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-1_000_000",
] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
firmware-common-new = { path = "../../Rust_Monorepo/firmware-common-new", default-features = false }
# stm32g0 and stm32g4 have the same memory location for device signature
stm32-device-signature = { version = "0.3.3", features = ["stm32g0"] }
embedded-can = "0.4.1"
salty = "0.3.0"
heapless = "0.8.0"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
incremental = true
