[package]
edition = "2021"
name = "firmware"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "memory-x",
    "stm32g474ce",
    "time-driver-any",
    "exti",
    "defmt",
    "unstable-pac",
    "chrono",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-32_768",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-sdmmc = { version = "0.8.1", default-features = false, features = ["defmt-log"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
firmware-common-new = { path = "../../Rust_Monorepo/firmware-common-new", default-features = false, features = [
    "defmt",
] }
stm32-device-signature = { version = "0.3.3", features = ["stm32g0"] }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }

[[bin]]
name = "firmware"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "sd_test"
path = "src/sd_test.rs"
test = false
bench = false

[[bin]]
name = "adc_test"
path = "src/adc_test.rs"
test = false
bench = false

[[bin]]
name = "can_main"
path = "src/can_main.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
