[package]
edition = "2024"
name = "firmware"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt-pipe = { path = "../../Rust_Monorepo/defmt-rtt-pipe", features = [
    # "disable-blocking-mode",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "stm32g474ce",
    "time-driver-any",
    "exti",
    "defmt",
    "unstable-pac",
    "chrono",
    "dual-bank",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-1_000_000",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
embedded-sdmmc = { git= "https://github.com/Be-ing/embedded-sdmmc-rs.git", rev="5f270ac", default-features = false, features = [
    "defmt-log",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
firmware-common-new = { path = "../../Rust_Monorepo/firmware-common-new", default-features = false, features = [
    "defmt",
] }
# stm32g0 and stm32g4 have the same memory location for device signature
stm32-device-signature = { version = "0.3.3", features = ["stm32g0"] }
embedded-io-async = "0.6.1"
embedded-can = "0.4.1"

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "sd_test"
path = "src/sd_test.rs"
test = false
bench = false

[[bin]]
name = "adc_test"
path = "src/adc_test.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = true
lto = true
opt-level = "z"
incremental = true
